--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "/"
@@ -48,6 +49,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   # tests
   - package-ecosystem: "composer"
@@ -71,6 +73,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/browser-detector/"
@@ -93,6 +96,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/cbschuld/"
@@ -115,6 +119,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/crawler-detect/"
@@ -137,6 +142,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/curated/"
@@ -159,6 +165,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/donatj/"
@@ -181,6 +188,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/endorphin/"
@@ -203,6 +211,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/matomo/"
@@ -225,6 +234,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/mobile-detect/"
@@ -247,6 +257,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/ua-parser-js/"
@@ -269,6 +280,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/ua-parser-php/"
@@ -291,6 +303,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/whichbrowser-php/"
@@ -313,6 +326,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "tests/woothee-php/"
@@ -335,6 +349,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "tests/ua-parser-js/"
@@ -357,10 +372,11 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   # parsers
-  - package-ecosystem: "npm"
-    directory: "parsers/3rd-eden-useragent/"
+  - package-ecosystem: "composer"
+    directory: "parsers/agent-zero/"
     schedule:
       interval: "weekly"
       day: "sunday"
@@ -379,7 +395,8 @@ updates:
     versioning-strategy: "increase"
     commit-message:
       include: "scope"
-      prefix: "npm"
+      prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/amplitude-ua-parser-js/"
@@ -402,6 +419,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/bowser/"
@@ -424,6 +442,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/browscap-php/"
@@ -446,6 +465,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/browser-detect/"
@@ -468,6 +488,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/browser-detector/"
@@ -490,6 +511,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/cbschuld/"
@@ -512,6 +534,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/crawler-detect/"
@@ -534,6 +557,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/detect-browser/"
@@ -556,6 +580,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/device-detector/"
@@ -578,6 +603,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/device-detector-node/"
@@ -600,6 +626,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/donatj/"
@@ -622,6 +649,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/endorphin/"
@@ -644,6 +672,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/express-useragent/"
@@ -666,6 +695,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/fex-uadevice/"
@@ -688,6 +718,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/financial-times-useragent_parser/"
@@ -710,6 +741,53 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
+
+  - package-ecosystem: "composer"
+    directory: "parsers/foroco/"
+    schedule:
+      interval: "weekly"
+      day: "sunday"
+      time: "04:00"
+      timezone: "Europe/Berlin"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
+    open-pull-requests-limit: 10
+    assignees:
+      - "mimmi20"
+    labels:
+      - "dependencies"
+    versioning-strategy: "increase"
+    commit-message:
+      include: "scope"
+      prefix: "composer"
+    target-branch: "master"
+
+  - package-ecosystem: "composer"
+    directory: "parsers/fyre-useragent/"
+    schedule:
+      interval: "weekly"
+      day: "sunday"
+      time: "04:00"
+      timezone: "Europe/Berlin"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
+    open-pull-requests-limit: 10
+    assignees:
+      - "mimmi20"
+    labels:
+      - "dependencies"
+    versioning-strategy: "increase"
+    commit-message:
+      include: "scope"
+      prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/hotoo-detector/"
@@ -732,6 +810,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/jenssegers-agent/"
@@ -754,6 +833,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/journyio-user-agent-parser/"
@@ -776,6 +856,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/matomo/"
@@ -798,6 +879,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/mobile-detect/"
@@ -820,6 +902,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/node-device-detector/"
@@ -842,6 +925,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/platformjs/"
@@ -864,6 +948,30 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
+
+  - package-ecosystem: "composer"
+    directory: "parsers/platine-php/"
+    schedule:
+      interval: "weekly"
+      day: "sunday"
+      time: "04:00"
+      timezone: "Europe/Berlin"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
+    open-pull-requests-limit: 10
+    assignees:
+      - "mimmi20"
+    labels:
+      - "dependencies"
+    versioning-strategy: "increase"
+    commit-message:
+      include: "scope"
+      prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/ua-parser-js/"
@@ -886,6 +994,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/ua-parser-php/"
@@ -908,6 +1017,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/vigour-ua/"
@@ -930,6 +1040,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/whichbrowser-js/"
@@ -952,6 +1063,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/whichbrowser-php/"
@@ -974,6 +1086,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/wolfcast/"
@@ -996,6 +1109,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   - package-ecosystem: "npm"
     directory: "parsers/woothee-js/"
@@ -1018,6 +1132,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "npm"
+    target-branch: "master"
 
   - package-ecosystem: "composer"
     directory: "parsers/woothee-php/"
@@ -1040,6 +1155,7 @@ updates:
     commit-message:
       include: "scope"
       prefix: "composer"
+    target-branch: "master"
 
   # actions
   - package-ecosystem: "github-actions"
@@ -1061,6 +1177,7 @@ updates:
       - "dependencies"
     commit-message:
       prefix: "github-actions"
+    target-branch: "master"
     ignore:
       - dependency-name: "mimmi20/ci"
       - dependency-name: "release-drafter/release-drafter"
