--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,39 +1,8 @@
 # https://docs.github.com/en/github/administering-a-repository/configuration-options-for-dependency-updates
 
-# https://docs.github.com/en/github/administering-a-repository/configuration-options-for-dependency-updates
-
 # file-version: 1.0
 
 version: 2
-
-multi-ecosystem-groups:
-  maintenance-master:
-    schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "04:00"
-      timezone: "Europe/Berlin"
-
-    cooldown:
-      default-days: 7
-
-    groups:
-      production-dependencies:
-        dependency-type: "production"
-      development-dependencies:
-        dependency-type: "development"
-
-    versioning-strategy: "increase"
-
-    rebase-strategy: "disabled"
-
-    assignees:
-      - "mimmi20"
-
-    labels:
-      - "dependencies"
-
-    target-branch: "master"
 
 updates:
   - package-ecosystem: "composer"
@@ -71,9 +40,34 @@ updates:
       - "parsers/wolfcast/"
       - "parsers/woothee-php/"
 
-    multi-ecosystem-group: "maintenance-master"
+    schedule:
+      interval: "cron"
+      cronjob: "0 4 10 * *"
+      timezone: "Europe/Berlin"
 
-    patterns: [ "*" ]
+    cooldown:
+      default-days: 7
+
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
+
+    assignees:
+      - "mimmi20"
+
+    labels:
+      - "dependencies"
+
+    versioning-strategy: "increase"
+
+    commit-message:
+      include: "scope"
+      prefix: "composer (master)"
+
+    # Disable rebasing for all pull requests
+    rebase-strategy: "disabled"
 
   - package-ecosystem: "npm"
 
@@ -98,18 +92,65 @@ updates:
       - "parsers/whichbrowser-js/"
       - "parsers/woothee-js/"
 
-    multi-ecosystem-group: "maintenance-master"
+    schedule:
+      interval: "cron"
+      cronjob: "0 4 10 * *"
+      timezone: "Europe/Berlin"
 
-    patterns: [ "*" ]
+    cooldown:
+      default-days: 7
+
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
+
+    assignees:
+      - "mimmi20"
+
+    labels:
+      - "dependencies"
+
+    versioning-strategy: "increase"
+
+    commit-message:
+      include: "scope"
+      prefix: "npm (master)"
+
+    # Disable rebasing for all pull requests
+    rebase-strategy: "disabled"
 
   - package-ecosystem: "github-actions"
 
     directory: "/"
 
+    schedule:
+      interval: "cron"
+      cronjob: "0 4 10 * *"
+      timezone: "Europe/Berlin"
+
+    cooldown:
+      default-days: 7
+
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
+
+    assignees:
+      - "mimmi20"
+
+    labels:
+      - "dependencies"
+
+    commit-message:
+      prefix: "github-actions (master)"
+
     ignore:
       - dependency-name: "mimmi20/ci"
       - dependency-name: "release-drafter/release-drafter"
 
-    multi-ecosystem-group: "maintenance-master"
-
-    patterns: [ "*" ]
+    # Disable rebasing for all pull requests
+    rebase-strategy: "disabled"
