--- a/phpstan.neon
+++ b/phpstan.neon
@@ -109,6 +109,14 @@ parameters:
 #  ignoreErrors:
 #    - '~Strict comparison using === between false and string will always evaluate to false~'
 
+services:
+  errorFormatter.sarif:
+    class: PHPStanSarifErrorFormatter\SarifErrorFormatter
+    arguments:
+      relativePathHelper: @simpleRelativePathHelper
+      currentWorkingDirectory: %currentWorkingDirectory%
+      pretty: true
+
 rules:
   # code complexity
   - Symplify\PHPStanRules\Rules\NoDynamicNameRule
